--- a/style.css
+++ b/style.css
@@ -25,6 +25,35 @@
   }
 }
 
+#sidebar {
+  background-color: #384047;
+  position: fixed;
+  width: 100px;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  text-align: center;
+}
+
+#sidebar ul {
+  list-style: none;
+  padding-left: 0px;
+}
+
+#sidebar li {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.fas {
+  font-size: 2em;
+  color: #38897F;
+}
+
+#page-content {
+  margin-left: 100px;
+}
+
 body {
     background: #EBEBEB;
     font-family: 'Montserrat', sans-serif;
